@@ -116,7 +116,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="contact.html">
+                        <a href="contact" class="dropdown-contact">
                           <h3>
                             Contactpagina <i class="fa fa-chevron-right"></i>
                           </h3>
